<resources>
    <string name="app_name">Telegram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Dan Demydenko</string>
    <string name="settings_default_status">online</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_default_number">+38011111111</string>
    <string name="settings_label_phone_number">Click to change phone number</string>
    <string name="settings_default_login">dandem</string>
    <string name="settings_label_login">Username</string>
    <string name="settings_default_bio">About myself</string>
    <string name="settings_label_bio">Write a little about yourself</string>
    <string name="settings_menu_change_name">Change name</string>
    <string name="settings_menu_exit">Exit</string>
    <string name="cd_registerimageview">registerImageView</string>
    <string name="register_text_enter_code">Enter a code</string>
    <string name="register_text_we_send">We sent a SMS with a verification code to your phone</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Your phone</string>
    <string name="register_toast_enter_phone">Enter phone number</string>
    <string name="register_phone_hint">----------------</string>
    <string name="settings_hint_input_name">Name</string>
    <string name="settings_hint_input_surname">Surname</string>
    <string name="settings_toast_name_is_empty">Name cannot be empty</string>
    <string name="toast_data_update">Data updated</string>
    <string name="settings_hint_input_username">Username</string>
    <string name="settings_input_bio">bio</string>
</resources>
