<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/registerImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_registerimageview" />

    <TextView
        android:id="@+id/registerTextEnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        android:layout_margin="@dimen/vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerImageView" />

    <TextView
        android:id="@+id/registerTextWeSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/small_text"
        android:text="@string/register_text_we_send"
        app:layout_constraintTop_toBottomOf="@+id/registerTextEnterCode"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"/>


    <EditText
        android:id="@+id/registerInputCode"
        android:maxLength="6"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/register_hint_default_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextWeSend"
        style="@style/editText"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>